# pydjirecord

./: .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  docs.yml
docs/: encryption.md  index.md
docs/api/: decoder.md  djilog.md  errors.md  export.md  frames.md  keychain.md  layout.md  records.md
docs/guide/: api-key.md  cli.md  installation.md  library.md
examples/: DJIFlightRecord_2024-09-01_[14-55-49].txt
src/pydjirecord/: __init__.py  __main__.py  _binary.py  decoder.py  djilog.py  error.py  utils.py
src/pydjirecord/export/: __init__.py  csv.py  geojson.py  json.py  kml.py
src/pydjirecord/frame/: __init__.py  anomaly.py  app.py  battery.py  builder.py  camera.py  custom.py  details.py  gimbal.py  home.py  osd.py  rc.py  recover.py
src/pydjirecord/keychain/: __init__.py  api.py  feature_point.py
src/pydjirecord/layout/: __init__.py  auxiliary.py  details.py  prefix.py
src/pydjirecord/proto/: virtual_stick.proto
src/pydjirecord/record/: __init__.py  app_gps.py  app_serious_warn.py  app_tip.py  app_warn.py  camera.py  center_battery.py  component_serial.py  custom.py  firmware.py  gimbal.py  home.py  key_storage.py  mc_params.py  ofdm.py  osd.py  rc.py  rc_display_field.py  rc_gps.py  recover.py  smart_battery.py  smart_battery_group.py  virtual_stick.py  virtual_stick_pb2.py
tests/: _log_discovery.py  conftest.py  test_binary.py  test_cli.py  test_decoder.py  test_djilog.py  test_djilog_unit.py  test_export.py  test_frame.py  test_keychain.py  test_keychain_cache.py  test_layout.py  test_mutation_regression.py  test_record.py  test_smoke.py  test_utils.py
tests/fixtures/: minimal_v14.txt
