[build-system]
requires = ["setuptools>=69.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pydjirecord"
version = "1.1.0"
description = "Python parser for DJI drone flight log files"
requires-python = ">=3.10"
license = "MIT"
authors = [{name = "Alex Rembish", email = "alex@rembish.org"}]
dependencies = [
    "httpx>=0.27",
    "pycryptodome>=3.20",
    "python-dotenv>=1.0",
]

[project.scripts]
djirecord = "pydjirecord.__main__:main"

[project.optional-dependencies]
dev = [
    "build>=1.0",
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "mypy>=1.10",
    "ruff>=0.5",
    "tox>=4.0",
    "grpcio-tools>=1.60",
]
proto = [
    "protobuf>=6.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py310"
line-length = 120
src = ["src", "tests"]
extend-exclude = ["src/pydjirecord/record/virtual_stick_pb2.py"]

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort
    "N",     # pep8-naming
    "UP",    # pyupgrade
    "B",     # flake8-bugbear
    "SIM",   # flake8-simplify
    "TCH",   # flake8-type-checking
    "RUF",   # ruff-specific
]

[tool.ruff.lint.isort]
known-first-party = ["pydjirecord"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = ["Crypto.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["pydjirecord.record.virtual_stick_pb2"]
ignore_errors = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=pydjirecord --cov-report=term-missing -v"
markers = [
    "integration: real flight-log end-to-end tests (requires examples/ to be populated)",
]

[tool.coverage.run]
source = ["pydjirecord"]

[tool.coverage.report]
fail_under = 90

[tool.coverage.paths]
source = ["src/pydjirecord"]

[tool.tox]
legacy_tox_ini = """
[tox]
envlist = py310, py311, py312, py313, py314
isolated_build = true
skip_missing_interpreters = true

[testenv]
extras = proto
deps =
    pytest>=8.0
    pytest-cov>=5.0
commands =
    pytest {posargs}
"""
