[build-system]
requires = ["setuptools>=69.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pydjirecord"
version = "1.3.0"
description = "Python parser for DJI drone flight log files"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{name = "Alex Rembish", email = "alex@rembish.org"}]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.27",
    "pycryptodome>=3.20",
    "python-dotenv>=1.0",
]

[project.urls]
Homepage = "https://github.com/rembish/pydjirecord"
Documentation = "https://rembish.github.io/pydjirecord/"
Repository = "https://github.com/rembish/pydjirecord"
Changelog = "https://github.com/rembish/pydjirecord/blob/master/CHANGELOG.md"
Issues = "https://github.com/rembish/pydjirecord/issues"

[project.scripts]
djirecord = "pydjirecord.__main__:main"

[project.optional-dependencies]
dev = [
    "build>=1.0",
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "mypy>=1.10",
    "ruff>=0.5",
    "tox>=4.0",
    "grpcio-tools>=1.60",
]
proto = [
    "protobuf>=6.0",
]
docs = [
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.27",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py310"
line-length = 120
src = ["src", "tests"]
extend-exclude = ["src/pydjirecord/record/virtual_stick_pb2.py"]

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort
    "N",     # pep8-naming
    "UP",    # pyupgrade
    "B",     # flake8-bugbear
    "SIM",   # flake8-simplify
    "TCH",   # flake8-type-checking
    "RUF",   # ruff-specific
]

[tool.ruff.lint.isort]
known-first-party = ["pydjirecord"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = ["Crypto.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["pydjirecord.record.virtual_stick_pb2"]
ignore_errors = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=pydjirecord --cov-report=term-missing -v"
markers = [
    "integration: real flight-log end-to-end tests (requires examples/ to be populated)",
]

[tool.coverage.run]
source = ["pydjirecord"]

[tool.coverage.report]
fail_under = 90

[tool.coverage.paths]
source = ["src/pydjirecord"]

[tool.tox]
legacy_tox_ini = """
[tox]
envlist = py310, py311, py312, py313, py314
isolated_build = true
skip_missing_interpreters = true

[testenv]
extras = proto
deps =
    pytest>=8.0
    pytest-cov>=5.0
commands =
    pytest {posargs}
"""
